# latticefit

./: .gitignore  LICENSE  PATENT_NOTES.md  README.md  SUBMISSION_CHECKLIST.md  app.py  compute_maf.py  fix_app.py  fix_app2.py  fix_app3.py  fix_app4.py  fix_app5.py  fix_app6.py  fix_app7.py  fix_examples2.py  fix_examples3.py  fix_final.py  fix_indent.py  fix_seed.py  latticefit_app.py  latticefit_jors.aux  latticefit_jors.out  latticefit_jors.tex  latticefit_softwarex.aux  latticefit_softwarex.out  latticefit_softwarex.tex  paper.bib  paper.md  plot_rice_latticefit.py  pyproject.toml  pyproject.toml.bak  report.html  requirements.txt  step1_tag_latticefit.ps1  step2_joss_submission.ps1  test.csv  write_config.py
.github/workflows/: draft-pdf.yml
.streamlit/: config.toml
examples/: mammal_masses.py  market_caps.py  musical_notes.py
examples/data/: DOWNLOAD_INSTRUCTIONS.md
examples/scripts/: download_data.py  prepare_benchmark_data.py  run_all_examples.py
latticefit/: __init__.py  cli.py  core.py  lucas.py  pyproject.toml
latticefit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
latticefit/examples/: sm_masses.py
latticefit/latticefit/: __init__.py  cli.py  optimize.py  plots.py  stats.py
results/chembl_hiv/: run_chembl_hiv.py
results/covid/: run_covid.py
results/finance/: run_sp500.py
results/inorganic/: run_ame2020.py  run_ame2020_physics.py  run_cod.py  run_nist_ame.py
results/organic/: run_organic_final.py  run_organic_sim.py
results/pantheria/: run_cetacea.py  run_pantheria.py  (+1 more)
tests/: test_core.py
(+3 files in other folders)
