[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latticefit"
version = "0.1.0"
description = "Lattice fitting engine"
requires-python = ">=3.9"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
plots = ["matplotlib>=3.7"]

[project.scripts]
latticefit = "latticefit.cli:main"

[tool.setuptools.packages.find]
where = ["."]